--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -300,6 +300,7 @@
           success : function(result){
             console.log(result);
             rightSide.append('<h3 style="color:green">XML parsed successfully. You can find the parsed xml in the same folder which stores the selected reporter ion files</h3>');
+            writeSummaryToFile(rightSide, serializedForm, function(err){});
             return callback(null);
           },
           error: function(response, textStatus, HTTPError){
