Made current processing status clearer.

--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -290,7 +290,8 @@
         }
       },
       function parseXML(callback){
-        rightSide.append("<div>Parsing XML file with MGF files</div>");
+        rightSide.append("<div>Parsing XML file with MGF files TEST TEST</div>");
+        rightSide.append('<h3 style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</h3>');
         $.ajax({
           type:"POST",
           url:"tab_2_helper_function",
