Modified size of processing notification.

--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -291,7 +291,7 @@
       },
       function parseXML(callback){
         rightSide.append("<div>Parsing XML file with MGF files TEST TEST</div>");
-        rightSide.append('<h3 style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</h3>');
+        rightSide.append('<div style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</div>');
         $.ajax({
           type:"POST",
           url:"tab_2_helper_function",
