--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -290,7 +290,7 @@
         }
       },
       function parseXML(callback){
-        rightSide.append("<div>Parsing XML file with MGF files TEST TEST</div>");
+        rightSide.append("<div>Parsing XML file with MGF files</div>");
         rightSide.append('<div style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</div>');
         $.ajax({
           type:"POST",
