Cleaned up console output in first 2 tabs.

--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -130,7 +130,7 @@
       $('div[id="tab_1"]').find("#options_if_not_recalibrating").show();
     }
     else{
-      alert("Something is funky, ask sam whats up");
+      alert("Issue with calibration options");
     }
   });
   </script>
