--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -17,6 +17,8 @@
 	        <li name="tab_link" class="active" id="tab_2"><a href="#">WRITE PEPTIDES AND REPORTERS</a></li>
 	        <li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	       	<li name="tab_link" class="active" id="tab_4"><a href="#">PLAIN PARSER</a></li>
+	       	<li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+	        <li name="tab_link" class="active" id="tab_5"><a href="#">COUNT PROTEINS</a></li>
 	        <li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	        <li name="tab_link" class="active" id="tab_3"><a href="#">CREATE INVERSE FILES</a></li>
 	      </ul>
@@ -25,7 +27,9 @@
 	  <div id="tab_1" name="tab_body"></div>
 	  <div id="tab_2" name="tab_body" style="display: none"></div>
 	  <div id="tab_4" name="tab_body" style="display: none"></div>
+	  <div id="tab_5" name="tab_body" style="display: none"></div>
 	  <div id="tab_3" name="tab_body" style="display: none"></div>
+	  
 	  <script type="text/javascript">
 	  $('[name=tab_body]').each(function(index){
 	  	console.log(index)
