Default MZ cutoff added.

--- a/templates/tab_6.html
+++ b/templates/tab_6.html
@@ -12,7 +12,7 @@
     <br>
     <div class="input-group" style="margin: 1%">
       <span class="input-group-addon" id="basic-addon1">MZ Cutoff</span>
-      <input type="text" class="form-control" id="mzCutoff">
+      <input type="text" class="form-control" id="mzCutoff" value="140">
       <span class="input-group-btn">
         <button class="btn btn-info" onclick="alert('This is the value to merge the MS2/MS3 files at')">?</button>
       </span>
