--- a/templates/tab_6.html
+++ b/templates/tab_6.html
@@ -1,20 +1,20 @@
 <div>
   <div style="float:left;width:60%" id="leftSide">
-    <h2 style="margin:1%">MERGE MS2/MS3</h2>
+    <h2 style="margin:1%">MERGE MS2/MS3 FILES</h2>
     <div class="input-group" style="margin: 1%">
       <span class="input-group-addon" id="basic-addon1">FULL PATH TO DIRECTORY OF MS2/MS3 FILES</span>
       <input type="text" class="form-control" id="ms2ms3directory">
       <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to the directory where your MS2 and MS3 files are located. \n\nHold shift as you right click on the directory, and then select from the menu that pops up \'copy as path\'. That copies the path to your clipboard. Paste that value into this text box, and remove the quotation marks.')">?</button>
+        <button class="btn btn-info" onclick="alert('On Windows, open Windows Explorer and navigate to directory containing ms2 and ms3 mgf files. Clicking on its URL bar, to the right of the folder names, will highlight the directory path. Copy and paste that into this text box.')">?</button>
       </span>
     </div>
 
     <br>
     <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">MZ Cutoff</span>
+      <span class="input-group-addon" id="basic-addon1">Fragment m/z boundary</span>
       <input type="text" class="form-control" id="mzCutoff" value="140">
       <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('This is the value to merge the MS2/MS3 files at')">?</button>
+        <button class="btn btn-info" onclick="alert('Merge MS3 below boundary with MS2 above boundary')">?</button>
       </span>
     </div>
 
