Updated wording for count proteins tab.

--- a/templates/tab_5.html
+++ b/templates/tab_5.html
@@ -11,10 +11,10 @@
 
     <br>
     <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Count only Unique proteins</span>
+      <span class="input-group-addon" id="basic-addon1">Peptide-spectrum-matches to count</span>
       <select class='form-control' id="countUniques">
-        <option value="0">Include all spectra and highest scored protein match</option>
-        <option value="1">Exclude spectra with multiple protein matches</option>
+        <option value="0">Include all spectra</option>
+        <option value="1">Exclude spectra that match multiple peptide sequences</option>
       </select>
       <!-- <span class="input-group-btn">
         <button class="btn btn-info" onclick="alert('Option to perform reporter-ion mass-recalibration before selecting runs. Provides more accuracy as a slight tradeoff for speed')">?</button>
