--- a/templates/tab_4.html
+++ b/templates/tab_4.html
@@ -90,6 +90,35 @@
     </div>
     <br>
 
+    <div class="input-group" style="margin: 1%">
+      <span class="input-group-addon" id="basic-addon1">Remove temporary MGF files</span>
+      <select class='form-control' id="removeMGF">
+        <option value="0">Yes, remove the temporary files</option>
+        <option value="1">Keep the temporary files</option>
+      </select>
+      <span class="input-group-btn">
+        <button class="btn btn-info" onclick="alert('Remove MGF files created during processing')">?</button>
+      </span>
+    </div>
+    <div class="input-group" style="margin: 1%">
+      <span class="input-group-addon" id="basic-addon1">Remove temporary reporter files</span>
+      <select class='form-control' id="removeReporters">
+        <option value="0">Yes, remove the temporary files</option>
+        <option value="1">Keep the temporary files</option>
+      </select>
+      <span class="input-group-btn">
+        <button class="btn btn-info" onclick="alert('Remove reporter files created during processing')">?</button>
+      </span>
+    </div>
+    <div class="input-group" style="margin: 1%">
+        <span class="input-group-addon" id="basic-addon1">Output directory</span>
+        <input type="text" class="form-control" id="outDirPath">
+        <span class="input-group-btn">
+          <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to your output directory. Clicking on your url bar will highlight the directory path, copy paste that into this text box.  Will default to the IDEAA/Archive folder.')">?</button>
+        </span>
+      </div>
+      <br>
+
     <button id="tab_4_button" class="btn btn-primary">Click to submit</button>
   </div>
   <div style="float:right;width:30%;height:88vh;border-style:solid;border-width:5px;overflow:scroll;padding:10px" id="rightSide">
