--- a/templates/tab_6.html
+++ b/templates/tab_6.html
@@ -9,7 +9,6 @@
       </span>
     </div>
 
-    <br>
     <div class="input-group" style="margin: 1%">
       <span class="input-group-addon" id="basic-addon1">Fragment m/z boundary</span>
       <input type="text" class="form-control" id="mzCutoff" value="140">
@@ -17,6 +16,15 @@
         <button class="btn btn-info" onclick="alert('Merge MS3 below boundary with MS2 above boundary')">?</button>
       </span>
     </div>
+       <br>
+        <div class="input-group" style="margin: 1%">
+        <span class="input-group-addon" id="basic-addon1">Output directory</span>
+        <input type="text" class="form-control" id="outDirPath" value="Default IDEAA Archive">
+        <span class="input-group-btn">
+          <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to your output directory. Clicking on your url bar will highlight the directory path, copy paste that into this text box.  Will default to the IDEAA/Archive folder.')">?</button>
+        </span>
+      </div>
+      <br>
 
     <button id="tab_6_button" class="btn btn-primary">Click to submit</button>
 
@@ -40,7 +48,7 @@
 
     var inputs = leftSide.find('input, select');
     
-    var serializedForm = serializeForm(inputs);
+    var serializedForm = serializeForm(inputs, getTimestamp());
     console.log(serializedForm);
 
     var rightSide = $(this).parent().siblings("#rightSide").first()
