Skip timestamp key when creating inverse files.

--- a/templates/tab_3.html
+++ b/templates/tab_3.html
@@ -590,6 +590,9 @@
     var transformed = {};
     var broken = false;
     _.each(_.keys(serializedFormSection), function(key){
+      if (key=="timestamp"){
+        return;
+      }
       if (broken){
         return;
       }
